<resources>
    <string name="app_name">ACM recruitment</string>
    <string name="title">BITS-ACM</string>
    <string name="pin">PIN</string>
    <string name="pin_hint">Enter PIN</string>
    <string name="developer">10zL</string>
    <string name="recruitment">Recruitment</string>
    <string name="promote">Promote</string>
    <string name="name">Name:</string>
    <string name="ID">ID:</string>
    <string name="aptitude">Aptitude:</string>
    <string name="not_available">Not available</string>
    <string name="Task">Task :</string>
    <string name="notProvided">Not yet uploaded.</string>
    <string name="population">Population :</string>
    <string name="allStudent">All Students</string>
    <string name="addStudent">Add Student</string>
    <string name="name_hint">Name</string>
    <string name="phoneNo_hint">Phone No</string>
</resources>
